--- a/applications/vault/vault.yaml
+++ b/applications/vault/vault.yaml
@@ -7,6 +7,7 @@ metadata:
 spec:
   destination:
     namespace: vault
+    server: https://kubernetes.default.svc
   project: default
   sources:
   - repoURL: https://helm.releases.hashicorp.com
