--- a/applications/helm/vault.yaml
+++ b/applications/helm/vault.yaml
@@ -10,7 +10,7 @@ spec:
     server: https://kubernetes.default.svc
   project: default
   sources:
-  - repoURL: oci://registry-1.docker.io/bitnamicharts
+  - repoURL: https://charts.bitnami.com/bitnami
     chart: redis
     helm:
       valueFiles: 
