--- a/helm/vault.yaml
+++ b/helm/vault.yaml
@@ -3,25 +3,57 @@ kind: Application
 metadata:
   name: redis
   namespace: argocd
-
 spec:
   destination:
     namespace: redis
     server: https://kubernetes.default.svc
   project: default
   sources:
-  - repoURL: https://charts.bitnami.com/bitnami
-    chart: redis
-    helm:
-      valueFiles: 
-      - $values/applications/helm/redis-values.yaml
-    targetRevision: 22.0.1
-  - repoURL: https://github.com/RStenzhorn/gitops.git
-    targetRevision: HEAD
-    ref: values
+    - repoURL: 'registry-1.docker.io/bitnamicharts'
+      path: 'redis'
+      targetRevision: 21.2.13
+      chart: redis
+      plugin:
+        name: argocd-vault-plugin-helm
+        env:
+          - name: HELM_VALUES
+            value: |
+              auth:
+                password: <path:argocd/data/sample-secret#lab-secret>
+              master:
+                resources:
+                  requests:
+                    cpu: "0"
+                    memory: "0Mi"
+                  limits:
+                    cpu: "2"
+                    memory: "1Gi"
+                service:
+                  type: LoadBalancer
+                  externalTrafficPolicy: Local
+              replica:
+                resources:
+                  requests:
+                    cpu: "0"
+                    memory: "0Mi"
+                  limits:
+                    cpu: "2"
+                    memory: "1Gi"
+              metrics:
+                enabled: false
+                resources:
+                  requests:
+                    cpu: 0
+                    memory: 0Mi
+                  limits:
+                    cpu: 150m
+                    memory: 192Mi
+                serviceMonitor:
+                  enabled: true
+                  namespace: "prometheus"
   syncPolicy:
     automated:
-      prune: false
+      prune: true
       selfHeal: true
     syncOptions:
       - CreateNamespace=true
