Refine ArgoCD Vault Plugin logic: update Helm template command and switch to bash command interpreter

--- a/argocd-values.yaml
+++ b/argocd-values.yaml
@@ -178,12 +178,12 @@ extraObjects:
               command:
                 - sh
                 - "-c"
-                - "find . -name 'Chart.yaml' | grep -qz . && find . -name 'values.yaml'"
+                - "find . -name 'Chart.yaml' && find . -name 'values.yaml'"
           generate:
             command:
-              - sh
+              - bash
               - "-c"
               - |
-                helm template $ARGOCD_APP_NAME --include-crds . |
-                argocd-vault-plugin generate -
+                HELM_OUTPUT=$(helm template $ARGOCD_APP_NAME -n $ARGOCD_APP_NAMESPACE -f <(echo "$ARGOCD_ENV_HELM_VALUES") .)
+                echo "$HELM_OUTPUT" | argocd-vault-plugin generate -
           lockRepo: false
